<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="grocery_list_menu">Mis listas</string>
    <string name="product_comparator_menu">Comparar precios</string>
    <string name="supermarket_locator_menu">Tiendas cercanas</string>
    <string name="location_permission_request_title">Permiso de ubicación requerido</string>
    <string name="location_permission_request_description">Se necesita que concedas permiso de ubicación para poder mostrarte supermercados próximos en el mapa</string>
    <string name="location_permission_request_action_grant">Solicitar permiso de nuevo</string>
    <string name="location_permission_request_action_deny">Denegar permiso de nuevo</string>
    <string name="location_permission_request_not_rationale_description">Has denegado el permiso de ubicación varias veces. Si ahora deseas activarlo, debes hacerlo desde los Ajustes de la aplicación</string>
    <string name="location_permission_request_not_rationale_action_grant">Abrir Ajustes</string>
    <string name="location_permission_request_not_rationale_action_deny">No volver a preguntar de nuevo</string>
    <string name="location_could_be_obtained">No se pudo obtener la ubicación actual</string>
    <string name="product_to_search">Producto a buscar</string>
    <string name="search_error_information_message">Se ha producido un error en la búsqueda</string>
    <string name="share_message">Ey! En *%4$s*, *%1$s* está a *%2$s* (%3$s)!!!!!\n\nTe dejo el enlace de la foto para que veas cómo es: %5$s</string>
    <string name="share_title">Comparte %1$s</string>
    <string name="new_list">Nueva lista</string>
    <string name="about">Acerca de</string>
    <string name="about_message"><![CDATA[<b>CompraPlus</b> es una aplicación realizada como Proyecto Final del Grado Superior de Desarrollo de Aplicaciones Multiplataforma. <br> <br> Roberto Moreno Muñoz <br> <br> Versión: ]]></string>
    <string name="accept">Aceptar</string>
    <string name="see_github">Ver Github</string>
    <string name="logout">Cerrar sesión</string>
    <string name="night_mode">Cambiar modo</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Regístrarte</string>
    <string name="signup_message">¿Nuevo en CompraPlus? Regístrate gratis aquí</string>
    <string name="login_message">¿Ya tienes cuenta en CompraPlus? Haz login aquí</string>
    <string name="password_repeat">Repetir contraseña</string>
    <string name="required_field">Campo requerido</string>
    <string name="wrong_user_password">Usuario y/o contraseña incorrectos</string>
    <string name="passwords_are_not_equals">Las contraseñas no coinciden</string>
    <string name="verification_email_sent">Debes verificar tu cuenta para completar el registro en CompraPlus. Se ha enviado un correo de verificación a %1$s</string>
    <string name="auth_email_exception">El correo electrónico es incorrecto</string>
    <string name="auth_invalid_credentials_exception">Credenciales inválidas</string>
    <string name="auth_invalid_user_exception">El usuario no existe o se encuentra deshabilitado</string>
    <string name="auth_user_collision_exception">Usuario ya existente</string>
    <string name="auth_weak_password_exception">Debe elegir una contraseña fuerte (6 caracteres)</string>
    <string name="auth_exception">Se ha producido un error</string>
    <string name="network_exception">No se ha detectado conexión a Internet</string>
    <string name="auth_must_verify_email">Debes verificar tu correo electrónico para poder acceder a CompraPlus</string>
    <string name="share_grocery_list">Compartir lista</string>
    <string name="remove_grocery_list">Eliminar lista</string>
    <string name="remove_product">Eliminar producto</string>
    <string name="remove_confirmation_grocery_list_message">¿Desea eliminar la lista?</string>
    <string name="remove_confirmation_product_message">¿Desea eliminar el producto?</string>
    <string name="delete">Eliminar</string>
    <string name="not_delete">No eliminar</string>
    <string name="adquired">Comprado</string>
    <string name="pending">Pendiente</string>
    <string name="grocery_list_name">Nombre de la lista</string>
    <string name="shopping_date">Fecha de la compra</string>
    <string name="create">Crear</string>
    <string name="select_shopping_date">Selecciona fecha de la compra</string>
    <string name="schedule_reminder">Programar recordatorio</string>
    <string name="reminder_me_grocery_list_on">Recordar comprar %1$s a las</string>
    <string name="scheduled_reminder">Programado recordatorio</string>
    <string name="scheduling_problem">Necesario el permiso de notificación</string>
    <string name="notification_title">¡Tienes una compra pendiente!</string>
    <string name="notification_body">Debes comprar la lista de %1$s</string>
    <string name="add_product">Añadir producto</string>
    <string name="quantity">Cantidad</string>
    <string name="manual_product">Producto manual</string>
    <string name="supermarket_product">Producto supermercado</string>
    <string name="product">Producto</string>
    <string name="supermarket">Supermercado</string>
    <string name="new_product">Nuevo producto</string>
    <string name="clone_product">Clonar producto</string>
    <string name="clone">Clonar</string>
    <string name="description_compra_plus_title">Logo de la aplicación Compra Plus. Es un carrito ligeramente inclinado con aspecto de avanzar rápidamente. En su interior tiene una línea discontinua simulando un camino con dos checks en color verde a cada uno de los extremos</string>
    <string name="description_extended_image_view_product">Producto ampliada</string>
    <string name="description_image_view_supermarket">Logo del supermercado</string>
    <string name="description_image_view_product">Producto</string>
    <string name="description_more">Menú para ver más opciones</string>
    <string name="description_delete">Opción para eliminar</string>

</resources>
