<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCompraPlusTitle"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_compraplus_title"
        tools:src="@drawable/ic_compraplus_title"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCompraPlusTitle">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInfoMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            tools:text="Este es un mensaje de prueba por eso es tan largo y voy a seguir escribiendo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="16dp"
        android:text="@string/signup_message"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:id="@+id/etEmail"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginEnd="32dp"-->
    <!--        android:hint="@string/email"-->
    <!--        android:drawableStart="@drawable/dia"-->
    <!--        android:drawablePadding="16dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"/>-->

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:id="@+id/etPassword"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginEnd="32dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:hint="@string/password"-->
    <!--        android:drawableStart="@drawable/dia"-->
    <!--        android:drawablePadding="16dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/etEmail"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"/>-->